# WideVal

./: .gitignore  Cargo.toml  README.md  build.rs
src/: config.rs  launcher.rs  main.rs  process.rs  resolution.rs  startup.rs  types.rs  ui.rs
